password protect portfolio

--- a/src/client/styles.less
+++ b/src/client/styles.less
@@ -587,6 +587,15 @@ main {
   }
 }
 
+.password {
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  input {
+    margin-left: 5px;
+  }
+}
+
 footer {
 
   background-color: @white;
